--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "author": "Valdir Silva <valdir.ti@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "node src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
     "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "typescript": "^4.8.2"
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint": "^8.28.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^2.8.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "*"
   }
 }
