chore: add git-commit-msg-linter

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "git-commit-msg-linter": "^4.2.1",
     "prettier": "^2.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
