--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/server.js",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "npx ts-node ./src/server.ts"
   },
   "dependencies": {
     "express": "^4.18.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.11",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
@@ -24,8 +27,6 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.2.1",
-    "prettier": "^2.8.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "*"
+    "prettier": "^2.8.0"
   }
 }
