--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/server.js",
+    "start": "node dist/server.js",
     "dev": "npx ts-node ./src/server.ts"
   },
   "dependencies": {
