chore: update dist folder path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "esModuleInterop": true,
+    "outDir": "dist",
+    "esModuleInterop": true
   }
 }
